--- a/assets/scss/base/_color.scss
+++ b/assets/scss/base/_color.scss
@@ -1,7 +1,7 @@
-$darkBlue: hsl(217, 28%, 15%);
-$darkBlue: hsl(218, 28%, 13%);
-$darkBlue: hsl(216, 53%, 9%);
-$darkBlue: hsl(219, 30%, 18%);
+$darkBlue2: hsl(217, 28%, 15%);
+$darkBlue3: hsl(218, 28%, 13%);
+$darkBlue4: hsl(216, 53%, 9%);
+$darkBlue1: hsl(219, 30%, 18%);
 
 $cyan: hsl(176, 68%, 64%);
 $blue: hsl(198, 60%, 50%);
