--- a/assets/scss/base/_global.scss
+++ b/assets/scss/base/_global.scss
@@ -9,4 +9,10 @@ body {
   height: 100%;
   width: 100%;
   font-family: $font-family-body;
+  // color: $white;
+  // background-color: $darkBlue3;
+}
+
+img{
+  width: 100%;
 }
