--- a/assets/scss/base/_global.scss
+++ b/assets/scss/base/_global.scss
@@ -13,6 +13,13 @@ body {
   // background-color: $darkBlue3;
 }
 
-img{
-  width: 100%;
+img {
+  // width: 100%;
+}
+
+.d-flex {
+  display: flex;
+}
+.flex-col {
+  flex-direction: column;
 }
