wip: styling components

--- a/assets/scss/component/_about.scss
+++ b/assets/scss/component/_about.scss
@@ -5,11 +5,20 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      margin: 50px auto;
+      margin: 80px auto;
       p {
         width: 350px;
         text-align: center;
       }
     }
   }
+}
+
+@media only screen and (min-width: 768px) {
+  .about-us-row {
+    display: flex;
+    justify-items: center;
+    width: 1024px;
+    margin: 0 auto;
+}
 }
