--- a/style.css
+++ b/style.css
@@ -9,7 +9,45 @@ body {
   position: relative;
   height: 100%;
   width: 100%;
+  color: hsl(0deg, 0%, 100%);
+  background-color: hsl(217deg, 28%, 15%);
   font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  line-height: 1.8;
+}
+
+a {
+  color: hsl(176deg, 68%, 64%);
+}
+a:visited, a:active {
+  color: hsl(176deg, 68%, 64%);
+}
+
+h1 {
+  font-size: 26px;
+  margin-bottom: 10px;
+}
+
+h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+h3 {
+  font-size: 18px;
+  margin-bottom: 8px;
+}
+
+.container {
+  margin: 20px;
+}
+
+.desktop {
+  display: none;
+}
+
+.mobile {
+  display: none;
 }
 
 .d-flex {
@@ -20,22 +58,84 @@ body {
   flex-direction: column;
 }
 
+.call-to-action {
+  border: 0;
+  background-image: linear-gradient(to right, hsl(176deg, 68%, 64%), hsl(198deg, 60%, 50%));
+  border-radius: 50px;
+  color: hsl(0deg, 0%, 100%);
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+}
+
+@media only screen and (max-width: 768px) {
+  .mobile {
+    display: initial;
+  }
+}
+@media only screen and (min-width: 769px) {
+  .desktop {
+    display: initial;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .container {
+    width: 1024px;
+    margin: 0 auto;
+  }
+}
 .navbar {
+  background-color: hsl(219deg, 30%, 18%);
+  padding: 20px;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.navbar img {
+  width: 100px;
 }
 .navbar .navbar-nav ul {
   display: flex;
   list-style: none;
 }
 .navbar .navbar-nav ul li {
-  margin-right: 20px;
+  margin-left: 15px;
 }
 
+@media only screen and (min-width: 768px) {
+  .navbar {
+    padding: 60px 80px;
+  }
+  .navbar .navbar-nav ul li {
+    margin-left: 30px;
+  }
+}
 .hero {
-  background-image: url("../../images/bg-curvy-mobile.svg");
-  background-position: bottom;
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-color: hsl(219deg, 30%, 18%);
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 0 auto;
+}
+.hero .hero-img {
+  width: 100%;
+}
+.hero .hero-content {
+  padding: 20px;
+  margin-bottom: 40px;
+}
+.hero .hero-content h1 {
+  font-size: 26px;
+  margin-bottom: 20px;
+}
+.hero .hero-content p {
+  margin-bottom: 20px;
+}
+.hero .hero-content .call-to-action {
+  width: 250px;
+  height: 50px;
 }
 
 .about-us .about-us-row .about-us-tile {
@@ -43,11 +143,97 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 50px auto;
+  margin: 80px auto;
 }
 .about-us .about-us-row .about-us-tile p {
   width: 350px;
   text-align: center;
+}
+
+@media only screen and (min-width: 768px) {
+  .about-us-row {
+    display: flex;
+    justify-items: center;
+    width: 1024px;
+    margin: 0 auto;
+  }
+}
+.early-access {
+  background-color: hsl(218deg, 28%, 13%);
+}
+
+.testimonials {
+  margin: 40px;
+  position: relative;
+}
+.testimonials .quotes {
+  position: absolute;
+  top: -20px;
+}
+.testimonials .quotes img {
+  height: 20px;
+}
+.testimonials .testimonial {
+  background-color: hsl(219deg, 30%, 18%);
+  margin-bottom: 30px;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px 0px hsl(216deg, 53%, 9%);
+  font-size: 12px;
+  letter-spacing: 0.3px;
+}
+.testimonials .testimonial .user {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+}
+.testimonials .testimonial .user .user-image {
+  height: 40px;
+}
+.testimonials .testimonial .user .user-image figure {
+  height: 40px;
+}
+.testimonials .testimonial .user .user-image img {
+  height: 40px;
+  border-radius: 50%;
+}
+.testimonials .testimonial .user .user-detail {
+  margin-left: 10px;
+}
+.testimonials .testimonial .user .user-detail h4 {
+  font-size: 12px;
+  line-height: 1;
+}
+.testimonials .testimonial .user .user-detail p {
+  font-size: 10px;
+  font-weight: 400;
+}
+
+.stay-in-touch {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 40px;
+}
+.stay-in-touch img {
+  width: 100%;
+}
+.stay-in-touch .external-link {
+  display: inline-flex;
+  align-items: center;
+}
+.stay-in-touch .icon-right {
+  width: 18px;
+  margin-left: 5px;
+}
+
+@media only screen and (min-width: 769px) {
+  .stay-in-touch {
+    flex-direction: row;
+  }
+}
+.footer {
+  background-color: hsl(216deg, 53%, 9%);
 }
 
 /*# sourceMappingURL=style.css.map */
