--- a/assets/scss/base/_global.scss
+++ b/assets/scss/base/_global.scss
@@ -1,3 +1,5 @@
+$extraMarginTop: 180px;
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -17,6 +19,7 @@ body {
 
 a {
   color: $cyan;
+  text-decoration: none;
   &:visited,
   &:active {
     color: $cyan;
@@ -53,6 +56,7 @@ h3 {
 
 .d-flex {
   display: flex;
+  align-content: center;
 }
 .flex-col {
   flex-direction: column;
