--- a/assets/scss/component/_get-in-touch.scss
+++ b/assets/scss/component/_get-in-touch.scss
@@ -3,10 +3,11 @@
   flex-direction: column;
   align-items: center;
   margin: 40px;
+  margin-top: $extraMarginTop;
   img {
     width: 100%;
   }
-  .external-link{
+  .external-link {
     display: inline-flex;
     align-items: center;
   }
@@ -16,8 +17,17 @@
   }
 }
 
-@media only screen and (min-width: 769px) {
+@media (min-width: 768px) {
   .stay-in-touch {
     flex-direction: row;
+    h2 {
+      font-size: 38px;
+    }
+    .ls {
+      flex-basis: 60%;
+    }
+    .rs {
+      flex-basis: 40%;
+    }
   }
 }
